--- a/src/main/resources/static/css/weadmin.less
+++ b/src/main/resources/static/css/weadmin.less
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import "../layui/css/layui.css";
+@import "/layui/css/layui.css";
 * {
     margin: 0px;
     padding: 0px;
@@ -419,7 +419,7 @@ body {
 .x-slide_left {
     width: 17px;
     height: 61px;
-    background: url(../images/icon.png) 0 0 no-repeat;
+    background: url(/images/icon.png) 0 0 no-repeat;
     position: absolute;
     top: 200px;
     left: 221px;
